--- a/ExamTasks/Task4/package.json
+++ b/ExamTasks/Task4/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "request": "^2.88.2",
     "yargs": "^17.3.1"
   }
